fix: icon visible on mobile #587

--- a/src/components/highlight/highlight.scss
+++ b/src/components/highlight/highlight.scss
@@ -103,7 +103,7 @@
     }
     .no-image {
       .img-container {
-        //display: none;
+        display: none;
       }
     }
 	}
